componentes para login listos y funcionando

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-orange-star-a4l63tla-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="m0pVEBGJW9Zo"
 POSTGRES_DATABASE="verceldb"
+
+SECRET_KEY="mySecretKeyVEBGJW9Zo@e"
