--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "styled-components": "^6.1.13",
     "three": "^0.168.0",
     "three-dxf": "^1.3.1",
-    "three-obj-loader": "^1.1.3"
+    "three-obj-loader": "^1.1.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -39,6 +40,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-plotly.js": "^2.6.3",
+    "@types/ws": "^8.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
